target/debug/build/crossbeam-utils-cde17d6f9aa58528/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /builddir/build/BUILD/rustc-1.81.0-src/library/core/src/sync/atomic.rs:3085:1
 ::: /builddir/build/BUILD/rustc-1.81.0-src/library/core/src/sync/atomic.rs:3101:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
